Fix so members page is centered. Also ensured the main content div covers whole page

--- a/src/app/pages/members/members.component.css
+++ b/src/app/pages/members/members.component.css
@@ -1,6 +1,13 @@
-h1{
+h1 {
     text-shadow: 1px 1px white;
     padding: 1em;
     color: black;
     text-align: center;
 }
+
+#members-main-content {
+    max-width: 70rem;
+    margin-left: auto;
+    margin-right: auto;
+}
+
